--- a/software.html
+++ b/software.html
@@ -39,16 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/7v1DShLMAa/Software-EngineerFull-Stack-Developer'>Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q76aVfw2&k=Job&j=o6Fo9fw2&__jvst=Employee+Referral&__jvsd=sk08BgwO&__jvsc=Twitter&bid=nl91nMw9'>Progress Careers - Senior Software Engineer - .NET</a></h5> 
+<p><span class="badge badge-light">Sofia, Bulgaria</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://benefits-data-trust.breezy.hr/p/730e9c476ac5-senior-software-engineer-interactions'>Senior Software Engineer - Interactions at Benefits Data Trust</a></h5> 
+<p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://benefits-data-trust.breezy.hr/p/443b14dedf5c-software-engineer-application-reliability'>Software Engineer - Application Reliability at Benefits Data Trust</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.orizon.de/de/job/real-time-software-developer-m-f-d-manching-11985'>Real-Time Software Developer (m/f/d) in Manching - Orizon GmbH</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/hobsons/job/o1Wsbfwk'>Hobsons Careers - Sr. Software Engineer (Naviance)</a></h5> 
@@ -59,11 +67,11 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698433249-sr-server-software-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Server Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vonage/jobs/4490557002'>Job Application for Sr. Software Engineer at Vonage</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vonage/jobs/4490557002'>Job Application for Sr. Software Engineer at Vonage</a></h5> 
 <p><span class="badge badge-light">Holmdel, NJ</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -95,7 +103,7 @@
 <p><span class="badge badge-light">Carlsbad, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
+<h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -201,7 +209,7 @@
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sugarcrm/job/ojfibfwL'>SugarCRM Careers - Software Engineer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -317,7 +325,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Vichara/743999698374386-software-engineer-lead-salesforce'>Vichara Software Engineer Lead - Salesforce | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Vichara/743999698374386-software-engineer-lead-salesforce'>Vichara Software Engineer Lead - Salesforce | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -329,7 +337,7 @@
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211098088/Lead-Software-Engineer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Lead Software Engineer | CV-Library.co.uk | 211098088</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211098088/Lead-Software-Engineer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Lead Software Engineer | CV-Library.co.uk | 211098088</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -403,7 +411,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle, Washington</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698358828-senior-software-engineer-ferries-m-f-d-'>Omio Senior Software Engineer - Ferries (m / f / d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698358828-senior-software-engineer-ferries-m-f-d-'>Omio Senior Software Engineer - Ferries (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -419,7 +427,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=o6S7afwZ&__jvst=Employee+Referral&__jvsd=sfhI7fw5&__jvsc=Twitter&bid=nVRYmMwn'>Cirrus Logic Careers - Spring Intern - Software Engineering</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -434,14 +442,6 @@
 <h5><a href='https://boards.greenhouse.io/twitch/jobs/4491130002'>Job Application for Software Engineer at Twitch</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://www.mathworks.com/company/jobs/opportunities/22426'>Software Engineer in Test - Parallel Computing - MathWorks Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oOzkafwB&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nycYmMwl'>ServiceNow Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light">Hyderabad, India  Hyderabad, India</span></p>
-<p>Posted on:: 2019-10-29</p>
 <hr/>
 
 
